# rs-annotaligner

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: align.rs  cli.rs  io.rs  main.rs
src/align/: global.rs  local.rs  mod.rs
src/io/: align.rs  bed4.rs  bedpe.rs  mod.rs  paf.rs
test/: annotaligner.py  create_outputs.sh
test/data/input/: alternate_col.bed  query.bed  query_local.bed  target.bed  target_gap.bed  target_local.bed
test/data/output/: basic_example.bedpe  basic_example_global.bedpe  basic_example_local.bedpe  basic_example_local.paf
